--- a/webpack-demo/v4.0/01-merge/package.json
+++ b/webpack-demo/v4.0/01-merge/package.json
@@ -25,6 +25,7 @@
     "webpack-merge-and-include-globally": "^2.1.20"
   },
   "dependencies": {
+    "@vue/cli-init": "^4.1.1",
     "zepto": "^1.2.0"
   }
 }
