--- a/babel-demo/package.json
+++ b/babel-demo/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.13.0",
     "@babel/types": "^7.7.1"
   },
   "dependencies": {
