--- a/husky-demo/package.json
+++ b/husky-demo/package.json
@@ -7,6 +7,9 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0"
   },
+  "scripts": {
+      "start": "node inde.js"
+  },
   "husky": {
       "hooks": {
           "pre-commit": "node preCommit.js"
