--- a/husky-demo/package.json
+++ b/husky-demo/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
       "hooks": {
-          "pre-commit": "node preCommit.js"
+          "pre-commit": "node commit.js"
       }
   }
 }
