--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint-staged": "^11.0.0"
   },
   "scripts": {
-      "start": "node index.js"
+      "start": "node index.js",
+      "prepare": "husky install"
   },
   "husky": {
       "hooks": {
