--- a/husky-demo/package.json
+++ b/husky-demo/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "prepare": "husky install husky-demo/husky"
+    "prepare": "cd .. && husky install husky-demo/.husky"
   },
   "husky": {
     "hooks": {
