--- a/babel-demo/package.json
+++ b/babel-demo/package.json
@@ -15,6 +15,7 @@
     "@babel/types": "^7.7.1"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.7.1"
+    "@babel/runtime-corejs3": "^7.7.1",
+    "core-js": "^3.14.0"
   }
 }
