--- a/webpack-demo/v5.0/01-ts/package.json
+++ b/webpack-demo/v5.0/01-ts/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack --mode production",
     "dev": "webpack serve --mode development --port 8000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/lodash": "^4.14.168",
+    "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
