--- a/rollup-demo/v2/package.json
+++ b/rollup-demo/v2/package.json
@@ -19,15 +19,18 @@
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^5.1.9",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-      "node": ">12"
+    "node": ">12"
   },
   "keywords": [],
   "author": ""
