--- a/mix-demo/serve-render/package.json
+++ b/mix-demo/serve-render/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v0",
+  "name": "serve-render",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.4",
-    "vite": "^2.6.13"
+  "dependencies": {
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14"
   }
 }
