--- a/rollup-demo/v2/package.json
+++ b/rollup-demo/v2/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.21",
-    "rollup": "^2.50.5"
+    "rollup": "^2.50.5",
+    "vconsole": "^3.9.4"
   },
   "description": "v2",
   "devDependencies": {
@@ -18,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/pluginutils": "^4.1.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
